# gochess

./: :w  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: algorithmfwd.h.BAFC720F76AE0D66.idx  alloc_traits.h.3F20844836B92A92.idx  alloc_traits.h.AA4FE26E446B6537.idx  allocator.h.78872CA87148A759.idx  array.75025A6CC92D7005.idx  assertions.h.1A28C16DCCBB9FAF.idx  atomic_word.h.8C97AE8F003B35F1.idx  atomicity.h.54F003D10E2AD619.idx  basic_string.h.C9633CFCF816289A.idx  basic_string.tcc.978F9F7C1DF18622.idx  binders.h.135FCA0EE8FB7493.idx  bit.28B2F856B1DB85EA.idx  c++allocator.h.8D69530D52993442.idx  c++config.h.F77E4EE1119A54CD.idx  c++locale.h.AAAEC6DBE4A428D0.idx  cctype.EAC08B603DD03C24.idx  cerrno.1D1A36417D84D43E.idx  char_traits.h.B275C9D19643BC12.idx  charconv.199547AA04ACF7D9.idx  charconv.h.F641103DCF1F42B1.idx  clocale.FA601010F856C9C7.idx  codecvt.h.339B274DE87EA6C9.idx  compare.B8406D52DC001E10.idx  concept_check.h.9FA668F44F92F11C.idx  concepts.0076187433244A88.idx  cookie_io_functions_t.h.E3E6C5414DB00C0C.idx  cpp_type_traits.h.E10BE2C4CA45C8EE.idx  cpu_defines.h.2751A35C868B1623.idx  cstddef.533DFD42AE9DF6A3.idx  cstdint.60074C3C51C51FCB.idx  cstdio.005601FBE291F299.idx  cstdlib.91A0639FE71A041B.idx  ctime.D80ED26B7EFB6367.idx  ctype.h.B268CEA0CECCFC59.idx  ctype_base.h.91B28B697234E7AC.idx  ctype_inline.h.88ACF73B4D51F778.idx  cwchar.9BBFFEFB1B47793B.idx  cwctype.F7BAF964220657F5.idx  cxxabi_forced.h.39654E71E8A80657.idx  (+112 more)
assets/: pieces.cpp
src/: board.cpp  board.hh  constants.hh  main.cpp  move.hh  search.cpp  search.hh  uci.hh
